devops/kubernetes/manifests/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qualisoja
  labels:
    name: qualisoja
    app: qualisoja
